--- a/config/deposit_channels.yml
+++ b/config/deposit_channels.yml
@@ -4,6 +4,12 @@
   sort_order: 1
   min_confirm: 1
   max_confirm: 3
+- id: 300
+  key: freicoin
+  currency: frc
+  sort_order: 1
+  min_confirm: 1
+  max_confirm: 3
 - id: 400
   key: bank
   currency: cny
