--- a/config/markets.yml.example
+++ b/config/markets.yml.example
@@ -1,10 +1,21 @@
-- id: btccny
-  code: 3
+- id: btcfrc
+  code: 4
   #name: BTC/CNY      # default name
   base_unit: btc
-  quote_unit: cny
+  quote_unit: frc
   #price_group_fixed: 1 # aggregate price levels in orderbook
-  bid: {fee: 0, currency: cny, fixed: 2}
+  bid: {fee: 0, currency: frc, fixed: 2}
+  ask: {fee: 0, currency: btc, fixed: 4}
+  sort_order: 1
+  #visible: false     # default to true
+
+- id: btcwlc
+  code: 5
+  #name: BTC/CNY      # default name
+  base_unit: btc
+  quote_unit: wlc
+  #price_group_fixed: 1 # aggregate price levels in orderbook
+  bid: {fee: 0, currency: wlc, fixed: 2}
   ask: {fee: 0, currency: btc, fixed: 4}
   sort_order: 1
   #visible: false     # default to true
