--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -16,11 +16,11 @@ server {
     add_header Cache-Control public;
   }
 
-  location ~ ^/(assets)/  {
-    gzip_static on;
-    expires     max;
-    add_header  Cache-Control public;
-  }
+#  location ~ ^/(assets)/  {
+#    gzip_static on;
+#    expires     max;
+#    add_header  Cache-Control public;
+#  }
 
   # disable gzip on all omniauth paths to prevent BREACH
   location ~ ^/auth/ {
